# sh1106-framework

./: .gitignore  LICENSE  PKG-INFO  README.md  pyproject.toml  setup.cfg  setup.py
src/sh1106_framework/: __init__.py  sh1106_font_generator.py  sh1106_framework.py  sh1106_image_generator.py
src/sh1106_framework/firmware/: main.py
src/sh1106_framework/framework/: constants.py
src/sh1106_framework/framework/states/: state.py  state_manager.py
src/sh1106_framework/graphics/: drawing.py  fonts.py  images.py
tests/ping-pong/: ping-pong.py  ping.py  pong.py
tests/ping-pong/assets/: default-font.json  default_font.json  example-images.json
useful-assets/: default-font.json  example-images.json  example-images.psd
useful-assets/output/: example-images.json
