[metadata]
name = sh1106_framework
version = 0.0.15
description = A state manager, graphics, image, and custom font drawing package for the SH1106 OLED screen based on the luma.oled package. It works with Raspberry Pi and other Linux-based single-board computers.
author = Dan Convey
license = Apache License 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Other OS
requires-python = >=3.10

[options]
packages = find:
install_requires =
    luma.oled
    pillow

[options.packages.find]
exclude =
  .gitignore
  sh1106_framework.egg-info
  __pycache__
  *.pyc
  tests
  useful-assets

[options.entry_points]
console_scripts =
    sh1106_font_generator = sh1106_framework.sh1106_font_generator:main
    sh1106_image_generator = sh1106_framework.sh1106_image_generator:main